Fix minor issue where user's profile picture was not filling up the entire circle on the profile page when tightly cropped

--- a/mobile/scss/modules/profile.scss
+++ b/mobile/scss/modules/profile.scss
@@ -4,6 +4,8 @@
 
 $profile-subheader-height : $bar-midsize-height - $bar-height - 20px;
 
+$photo-dimension : $profile-subheader-height * 1.1;
+
 .profile-visual{
   position: absolute;
   left: 10px;
@@ -16,11 +18,11 @@ $profile-subheader-height : $bar-midsize-height - $bar-height - 20px;
   .photo{
     display: inline-block;
     vertical-align: top;
-    width: $profile-subheader-height * 1.1;
-    height: $profile-subheader-height * 1.1;
+    width: $photo-dimension;
+    height: $photo-dimension;
     background: #333 url('../img/bg-profile-default.jpg') 50% no-repeat;
-    -webkit-background-size: 120px 120px;
-    background-size: 120px 120px;
+    -webkit-background-size: $photo-dimension $photo-dimension;
+    background-size: $photo-dimension $photo-dimension;
     border: 2px solid #8C8B8B;
     text-align: center;
     @include rounded-corner(100%);
